# shiro-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: audit-check-on-push.yaml  docker.yaml  rust.yaml
src/: healthz.rs  keys.rs  main.rs  opts.rs  wallet.rs
src/wallet/: address.rs  asset_balance.rs  assets.rs  blind.rs  data.rs  dir.rs  drain_to.rs  fail_transfers.rs  go_online.rs  invoice.rs  issue.rs  mod.rs  refresh.rs  send.rs  transfers.rs  unspents.rs  utxos.rs
src/wallet/issue/: rgb20.rs
test-mocks/: docker-compose.yml  start_services.sh
