[package]
name = "shiro-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
clap = { version = "4.0.15", features = ["derive", "env"] }
rgb-lib = { git = "https://github.com/RGB-Tools/rgb-lib", rev = "b0dc38c8a35c0d970c70722c8975f5a7526ff3fd" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.1.0"
