[package]
name = "shiro-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
clap = { version = "4.0.15", features = ["derive", "env"] }
rgb-lib = { git = "https://github.com/RGB-Tools/rgb-lib", rev = "d1de142dc40d917c8c4fc60e0b1f30a8847eb111" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.1.0"
async-trait = "0.1.59"
once_cell = "1.16.0"
test-context = "0.1.4"
