[package]
name = "shiro-backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
clap = { version = "4.0.15", features = ["derive", "env"] }
rand = "0.8.5"
rgb-lib = "=0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.1.0"
async-trait = "0.1.59"
once_cell = "1.16.0"
